Updating html element positioning in the css stylesheet

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   </head>
 
   <body>
-    <nav>
-      <a href="">About Me</a>
-      <a href="">My Work</a>
-      <a href="">Connect with Me</a>
+    <nav class="navflexbox">
+      <a href="#aboutme">About Me</a>
+      <a href="#mywork">My Work</a>
+      <a href="#contactinfo">Connect with Me</a>
     </nav>
 
-    <header>
+    <header id="main-display">
       <img
         src="https://cdn4.vectorstock.com/i/thumb-large/95/98/dog-logo-template-vector-21209598.jpg"
         alt="Page Logo"
@@ -24,7 +24,7 @@
       <h1>Brice Bridges</h1>
     </header>
 
-    <section>
+    <section id="aboutme">
       <div>
         <h3>About Me</h3>
         <p>
@@ -34,52 +34,56 @@
           dolor sit amet consectetur adipisicing elit. Iure aut totam libero
           veniam tenetur eaque.
         </p>
+        <!--My name is Brice Bridges ... -->
       </div>
       <img
         src="https://images.unsplash.com/photo-1501706362039-c06b2d715385?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8emVicmF8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
         alt="ProfilePhoto"
       />
+      <!--Add profile photo.-->
     </section>
 
-    <main>
-      <section>
+    <main id="mywork">
+      <section class="projectsection">
         <div>
           <h3>HTML & CSS</h3>
         </div>
-        <div>
+        <div class="projectlist">
           <p>Project 1</p>
           <p>Project 2</p>
           <p>Project 3</p>
         </div>
       </section>
-      <section>
+      <section class="projectsection">
         <div>
           <h3>JavaScript</h3>
         </div>
-        <div>
-          <div><p>Project 1</p></div>
-          <div><p>Project 2</p></div>
-          <div><p>Project 3</p></div>
+        <div class="projectlist">
+          <p>Project 1</p>
+          <p>Project 2</p>
+          <p>Project 3</p>
         </div>
       </section>
-      <section>
+      <section class="projectsection">
         <div>
           <h3>Bootstrap</h3>
         </div>
-        <div>
-          <div><p>Project 1</p></div>
-          <div><p>Project 2</p></div>
-          <div><p>Project 3</p></div>
+        <div class="projectlist">
+          <p>Project 1</p>
+          <p>Project 2</p>
+          <p>Project 3</p>
         </div>
       </section>
     </main>
 
-    <section>
+    <section id="contactinfo">
       <h3>Connect with Me</h3>
       <div>
-        <a href="" target="_blank"></a>
-        <a href="" target="_blank"></a>
-        <a href="" target="_blank"></a>
+        <a href="mailto:bcb35b@gmail.com" target="_blank">Email</a>
+        <a href="https://www.linkedin.com/in/brice-bridges/" target="_blank"
+          >LinkedIn</a
+        >
+        <a href="https://github.com/bcbridges" target="_blank">GitHub</a>
       </div>
     </section>
   </body>
