Adding in asset photos and linking them to associated locations in index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
   <body>
     <nav class="navflexbox">
+      <a href="#main-display"
+        ><img
+          src="https://cdn4.vectorstock.com/i/thumb-large/95/98/dog-logo-template-vector-21209598.jpg"
+          alt="Page Logo"
+      /></a>
       <a href="#aboutme">About Me</a>
       <a href="#mywork">My Work</a>
       <a href="#contactinfo">Connect with Me</a>
@@ -36,17 +41,14 @@
         </p>
         <!--My name is Brice Bridges ... -->
       </div>
-      <img
-        src="https://images.unsplash.com/photo-1501706362039-c06b2d715385?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8emVicmF8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-        alt="ProfilePhoto"
-      />
+      <img src="./assets/images/ProfilePhoto.PNG" alt="ProfilePhoto" />
       <!--Add profile photo.-->
     </section>
 
     <main id="mywork">
       <section class="projectsection">
         <div>
-          <h3>HTML & CSS</h3>
+          <h3 id="proj-group1">HTML & CSS</h3>
         </div>
         <div class="projectlist">
           <p>Project 1</p>
@@ -56,7 +58,7 @@
       </section>
       <section class="projectsection">
         <div>
-          <h3>JavaScript</h3>
+          <h3 id="proj-group2">JavaScript</h3>
         </div>
         <div class="projectlist">
           <p>Project 1</p>
@@ -66,7 +68,7 @@
       </section>
       <section class="projectsection">
         <div>
-          <h3>Bootstrap</h3>
+          <h3 id="proj-group3">Bootstrap</h3>
         </div>
         <div class="projectlist">
           <p>Project 1</p>
@@ -79,11 +81,17 @@
     <section id="contactinfo">
       <h3>Connect with Me</h3>
       <div>
-        <a href="mailto:bcb35b@gmail.com" target="_blank">Email</a>
-        <a href="https://www.linkedin.com/in/brice-bridges/" target="_blank"
-          >LinkedIn</a
+        <a href="mailto:bcb35b@gmail.com"
+          ><img src="./assets/images/Email.png" alt="Email Logo" /> Email</a
         >
-        <a href="https://github.com/bcbridges" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/brice-bridges/" target="_blank"
+          ><img src="./assets/images/LI-In-Bug.png" alt="LinkedIn Logo" />
+          LinkedIn</a
+        >
+        <a href="https://github.com/bcbridges" target="_blank"
+          ><img src="./assets/images/GitHub-Mark-64px.png" alt="GitHub Logo" />
+          GitHub</a
+        >
       </div>
     </section>
   </body>
