Adding additional nav elements and head metadata for css fonts. No changes to style.css.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/normalize.css" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
+      rel="stylesheet"
+    />
     <title>Brice Bridges Portfolio</title>
   </head>
 
@@ -19,6 +25,15 @@
       <a href="#aboutme">About Me</a>
       <a href="#mywork">My Work</a>
       <a href="#contactinfo">Connect with Me</a>
+      <a href="mailto:bcb35b@gmail.com"
+        ><img src="./assets/images/Email.png" alt="Email Logo"
+      /></a>
+      <a href="https://www.linkedin.com/in/brice-bridges/" target="_blank"
+        ><img src="./assets/images/LI-In-Bug.png" alt="LinkedIn Logo"
+      /></a>
+      <a href="https://github.com/bcbridges" target="_blank"
+        ><img src="./assets/images/GitHub-Mark-64px.png" alt="GitHub Logo"
+      /></a>
     </nav>
 
     <header id="main-display">
@@ -42,7 +57,6 @@
         <!--My name is Brice Bridges ... -->
       </div>
       <img src="./assets/images/ProfilePhoto.PNG" alt="ProfilePhoto" />
-      <!--Add profile photo.-->
     </section>
 
     <main id="mywork">
@@ -51,7 +65,12 @@
           <h3 id="proj-group1">HTML & CSS</h3>
         </div>
         <div class="projectlist">
-          <p>Project 1</p>
+          <p>Code Refactoring</p>
+
+          <!-- <a href="https://github.com/bcbridges/code-refactor" target="_blank"
+            >Code Refactoring</a
+          > -->
+
           <p>Project 2</p>
           <p>Project 3</p>
         </div>
