Updated <p> project elements in html to links. Implemented <a> css styling and phased out <p> styling

--- a/index.html
+++ b/index.html
@@ -65,14 +65,11 @@
           <h3 id="proj-group1">HTML & CSS</h3>
         </div>
         <div class="projectlist">
-          <p>Code Refactoring</p>
-
-          <!-- <a href="https://github.com/bcbridges/code-refactor" target="_blank"
+          <a href="https://github.com/bcbridges/code-refactor" target="_blank"
             >Code Refactoring</a
-          > -->
-
-          <p>Project 2</p>
-          <p>Project 3</p>
+          >
+          <a href="#" target="">Project 2</a>
+          <a href="#" target="">Project 3</a>
         </div>
       </section>
       <section class="projectsection">
@@ -80,9 +77,9 @@
           <h3 id="proj-group2">JavaScript</h3>
         </div>
         <div class="projectlist">
-          <p>Project 1</p>
-          <p>Project 2</p>
-          <p>Project 3</p>
+          <a href="#" target="">Project 1</a>
+          <a href="#" target="">Project 2</a>
+          <a href="#" target="">Project 3</a>
         </div>
       </section>
       <section class="projectsection">
@@ -90,9 +87,9 @@
           <h3 id="proj-group3">Bootstrap</h3>
         </div>
         <div class="projectlist">
-          <p>Project 1</p>
-          <p>Project 2</p>
-          <p>Project 3</p>
+          <a href="#" target="">Project 1</a>
+          <a href="#" target="">Project 2</a>
+          <a href="#" target="">Project 3</a>
         </div>
       </section>
     </main>
