Updating Media Queries after testing edits.

--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
       <div>
         <h3>About Me</h3>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, labore
-          nobis quaerat vel quas nam maiores optio unde, quod, incidunt id iste
-          culpa? Tempora itaque, voluptatum rem repellat beatae et. Lorem ipsum
-          dolor sit amet consectetur adipisicing elit. Iure aut totam libero
-          veniam tenetur eaque.
+          My name is Brice Bridges, and I am a earthwork engineer turned
+          technical project manager. I am passionate about bringing an
+          exponential drive to the constantly changing world of technology.
         </p>
-        <!--My name is Brice Bridges ... -->
+        <br />
+        <p>Let's make something great.</p>
       </div>
       <img src="./assets/images/ProfilePhoto.PNG" alt="ProfilePhoto" />
     </section>
