Final updates to README.txt and adding LICENSE.TXT.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>
           My name is Brice Bridges, and I am a earthwork engineer turned
           technical project manager. I am passionate about bringing an
-          exponential drive to the constantly changing world of technology.
+          exponential drive to constantly changing world of technology.
         </p>
         <br />
         <p>Let's make something great.</p>
