Added resume and updated contact information.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="#aboutme">About Me</a>
       <a href="#mywork">My Work</a>
       <a href="#contactinfo">Connect with Me</a>
-      <a href="mailto:bcb35b@gmail.com"
+      <a href="mailto:bbridgesdev@gmail.com"
         ><img src="./assets/images/Email.png" alt="Email Logo"
       /></a>
       <a href="https://www.linkedin.com/in/brice-bridges/" target="_blank"
@@ -96,17 +96,9 @@
     <section id="contactinfo">
       <h3>Connect with Me</h3>
       <div>
-        <a href="mailto:bcb35b@gmail.com"
-          ><img src="./assets/images/Email.png" alt="Email Logo" /> Email</a
-        >
-        <a href="https://www.linkedin.com/in/brice-bridges/" target="_blank"
-          ><img src="./assets/images/LI-In-Bug.png" alt="LinkedIn Logo" />
-          LinkedIn</a
-        >
-        <a href="https://github.com/bcbridges" target="_blank"
-          ><img src="./assets/images/GitHub-Mark-64px.png" alt="GitHub Logo" />
-          GitHub</a
-        >
+        <a href="mailto:bbridgesdev@gmail.com">E: bbridgesdev@gmail.com</a>
+        <p>P: 217-414-6134</p>
+        <a href="./assets/resume.pdf" target="_blank">Resume</a>
       </div>
     </section>
   </body>
