Added basic html for portofio rework.

--- a/indexV2.html
+++ b/indexV2.html
@@ -5,21 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brice Bridges Portfolio</title>
-    <link rel="stylesheet" href="/assets/css/styleV2.css" />
+    <link rel="stylesheet" href="./assets/css/styleV2.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <nav>
-      <a href="#">About Me</a>
-      <a href="#">My Work</a>
-      <a href="#">Connect with Me</a>
-    </nav>
+    <section>
+      <div class="vl"></div>
+      <div class="mercury circle"></div>
+      <div class="venus circle"></div>
+      <div class="earth circle"></div>
+      <div class="mars circle"></div>
+      <div class="jupiter circle"></div>
+      <div class="saturn circle"></div>
+      <div class="uranus circle"></div>
+      <div class="neptune circle"></div>
+    </section>
 
-    <header>Brice Bridges</header>
-
-    <section>About Me</section>
-
-    <main>Work Section</main>
-
-    <footer>Contact Me BB Girl</footer>
+    <main>
+      <nav>
+        <a href="#">About</a>
+        <a href="#">Work</a>
+        <a href="#">Resume</a>
+        <a href="#">Contact</a>
+      </nav>
+      <section class="introduction">
+        <h1>Welcome! My name is <br /><span>Brice Bridges</span></h1>
+        <h3>
+          I'm a <span>UI developer</span> who puts an emphasis on <br />
+          <span>less code to do more.</span>
+        </h3>
+      </section>
+    </main>
   </body>
 </html>
